<resources>
    <string name="app_name">Time Manager</string>
    <string name="title_buckets">Own buckets</string>
    <string name="title_shared_buckets">Shared buckets</string>
    <string name="title_shared_tasks">Shared tasks</string>
    <string name="title_settings">Settings</string>
    <string name="loginBanner">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginAction">Continue</string>
    <string name="sessionExpired">Login session expired. Log in again</string>
    <string name="showButton">Show</string>
    <string name="editButton">Edit</string>
    <string name="shareButton">Share</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_create_bucket">Create bucket</string>
    <string name="bucketName">Bucket name</string>
    <string name="bucketDescription">Description</string>
    <string name="bucketMaxTasks">Max tasks number</string>
    <string name="saveBucket">Save</string>
    <string name="editBucketTitle">Edit bucket</string>
    <string name="bucketDetailsTitle">Bucket details</string>
    <string name="bucketDetailsTasksTabTitle">Tasks</string>
    <string name="bucketDetailsDetailsTabTitle">Details</string>
</resources>